# zps

./: Cargo.toml  README.md
src/: cli.rs  constants.rs  gpg.rs  main.rs  store.rs  utils.rs  vcs.rs
src/commands/: add.rs  edit.rs  generate.rs  init.rs  list.rs  mod.rs  remove.rs  show.rs
src/commands/otp/: add.rs  generate.rs  mod.rs
src/commands/pass/: add.rs  generate.rs
