[package]
name = "password-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
eyre = "0.6.12"
rand = "0.9.1"
rpassword = "7.4.0"
sequoia-openpgp = { version = "2.0.0" }
termtree = "0.5.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"
